/*
 * Student Name: Xihai Ren
 * Student No: 041127486
 * Professor: George Kriger
 * Due Date: 2024/06/02
 * Description: Assignment 1
 */
package com.algonquin.cst8288.assignment1.controller;

/**
 * Contains constant rate values used for calculating bonuses and pension
 * contributions.
 * <p>
 * This class provides static final variables that represent the bonus
 * percentage and pension percentage.
 * </p>
 *
 * @version 1.0.0
 * @since Oracle 17.0.11
 *
 * @author Xihai Ren
 */
public class Rate {

    /**
     * The percentage of the bonus.
     */
    public static final double BONUS_PERCENTAGE = 0.025;
    /**
     * The percentage of the pension contribution.
     */
    public static final double PENSION_PERCENTAGE = 0.01;
}
